[package]
name = "arkanoid"
version = "0.1.0"
authors = [
  "Quentin Gliech <quentingliech@gmail.com>",
  "Gabriel Poittevin <gabriel.poittevin@gmail.com>",
]

[dependencies]
rand = "0.6"
failure = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.sdl2]
version = "0.32.0"
features = ["gfx", "image"]
